--- a/index.html
+++ b/index.html
@@ -2,9 +2,48 @@
 <html lang="EN">
 <head>
 	<title>TWN</title>
+	<meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
 	<link rel="stylesheet" type="text/css" href="resources/css/main.css">
 </head>
 <body>
-
+		<header>
+			<div class="first-nav">
+				<ul class="first-ul">
+					<li><a href="#">News</a></li>
+					<li><a href="#">Events</a></li>
+					<li><a href="#">Business</a></li>
+					<li><a href="#">AMAs</a></li>
+					<li><a href="#">Spaces</a></li>
+					<li><a href="#">Terms & Conditions</a></li>
+				</ul>
+				<ul class="last-ul">
+					<li><a href="#">About</a></li>
+					<li><a href="#">Team</a></li>
+					<li><a href="#">Advertise</a></li>
+					<li><a href="#">Jobs</a></li>
+					<li><a href="#">contacts</a></li>
+				</ul>
+			</div>
+			<div class="last-nav">
+				<ul>
+					<li><a href="#">Latest</a></li>
+					<li><a href="#">Hard fork</a></li>
+					<li><a href="#">plugged</a></li>
+					<li><a href="#">fundermentals</a></li>
+					<li><a href="#">work 2030</a></li>
+				</ul>
+				<form><input type="search" name="search"></></form>
+			</div>
+			<a href="#"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry it →</p></a>
+			<div>
+				<div></div>
+				<div></div>
+				<div></div>
+			</div>
+		</header>
+		
 </body>
 </html>
