Structure of the page up to featured

--- a/index.html
+++ b/index.html
@@ -1,49 +1,203 @@
 <!DOCTYPE html>
 <html lang="EN">
+
 <head>
 	<title>TWN</title>
 	<meta charset="utf-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 	<link rel="stylesheet" type="text/css" href="resources/css/main.css">
 </head>
+
 <body>
-		<header>
-			<div class="first-nav">
-				<ul class="first-ul">
-					<li><a href="#">News</a></li>
-					<li><a href="#">Events</a></li>
-					<li><a href="#">Business</a></li>
-					<li><a href="#">AMAs</a></li>
-					<li><a href="#">Spaces</a></li>
-					<li><a href="#">Terms & Conditions</a></li>
-				</ul>
-				<ul class="last-ul">
-					<li><a href="#">About</a></li>
-					<li><a href="#">Team</a></li>
-					<li><a href="#">Advertise</a></li>
-					<li><a href="#">Jobs</a></li>
-					<li><a href="#">contacts</a></li>
-				</ul>
-			</div>
-			<div class="last-nav">
-				<ul>
-					<li><a href="#">Latest</a></li>
-					<li><a href="#">Hard fork</a></li>
-					<li><a href="#">plugged</a></li>
-					<li><a href="#">fundermentals</a></li>
-					<li><a href="#">work 2030</a></li>
-				</ul>
-				<form><input type="search" name="search"></></form>
-			</div>
-			<a href="#"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry it →</p></a>
+	<header>
+		<div class="first-nav">
+			<ul class="first-ul">
+				<li><a href="#">News</a></li>
+				<li><a href="#">Events</a></li>
+				<li><a href="#">Business</a></li>
+				<li><a href="#">AMAs</a></li>
+				<li><a href="#">Spaces</a></li>
+				<li><a href="#">Terms & Conditions</a></li>
+			</ul>
+			<ul class="last-ul">
+				<li><a href="#">About</a></li>
+				<li><a href="#">Team</a></li>
+				<li><a href="#">Advertise</a></li>
+				<li><a href="#">Jobs</a></li>
+				<li><a href="#">contacts</a></li>
+			</ul>
+		</div>
+		<div class="last-nav">
+			<ul>
+				<li><a href="#">Latest</a></li>
+				<li><a href="#">Hard fork</a></li>
+				<li><a href="#">plugged</a></li>
+				<li><a href="#">fundermentals</a></li>
+				<li><a href="#">work 2030</a></li>
+			</ul>
 			<div>
-				<div></div>
-				<div></div>
-				<div></div>
+				<img src="./resources/img/search.png" alt="Search image">
 			</div>
-		</header>
-		
+		</div>
+		<a href="#">
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry it →</p>
+		</a>
+		<div>
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
+	</header>
+
+	<div class="carousel">
+		<div class="slide1"></div>
+		<div class="slide2"></div>
+		<div class="slide3"></div>
+	</div>
+
+	<section class="latest-news clearfix">
+		<h2>Latest News ></h2>
+		<article>
+			<div class="l-news-img"></div>
+			<h3 class="l-news-title"></h3>
+			<p class="l-news-content"></p>
+		</article>
+		<article>
+			<div class="l-news-img"></div>
+			<h3 class="l-news-title"></h3>
+			<p class="l-news-content"></p>
+		</article>
+		<article>
+			<div class="l-news-img"></div>
+			<h3 class="l-news-title"></h3>
+			<p class="l-news-content"></p>
+		</article>
+		<article>
+			<div class="l-news-img"></div>
+			<h3 class="l-news-title"></h3>
+			<p class="l-news-content"></p>
+		</article>
+	</section>
+
+	<section class="latest-news clearfix">
+		<h2>Microsoft Surface events 2019</h2>
+		<article>
+			<div class="l-news-img"></div>
+			<h3 class="l-news-title"></h3>
+			<p class="l-news-content"></p>
+		</article>
+		<article>
+			<div class="l-news-img"></div>
+			<h3 class="l-news-title"></h3>
+			<p class="l-news-content"></p>
+		</article>
+		<article>
+			<div class="l-news-img"></div>
+			<h3 class="l-news-title"></h3>
+			<p class="l-news-content"></p>
+		</article>
+		<article>
+			<div class="l-news-img"></div>
+			<h3 class="l-news-title"></h3>
+			<p class="l-news-content"></p>
+		</article>
+	</section>
+
+	<section class="funding">
+		<h2>Latest funding rounds on Index.co ></h2>
+		<ul class="links">
+			<li><a href="#">See more |</a></li>
+			<li><a href="#">Get updates by email |</a></li>
+			<li><a href="#">Add Info</a></li>
+		</ul>
+		<div class="articles">
+			<article class="fund">
+				<div class="img">
+					<img src="" alt="fund logo">
+				</div>
+				<h2>Zen Educate</h2>
+				<h3>$6.5 m <span>Serie A</span></h3>
+				<ul>
+					<li> </li>
+					<li></li>
+				</ul>
+				<div class="fund-footer"></div>
+			</article>
+			<article class="fund">
+				<div class="img">
+					<img src="" alt="fund logo">
+				</div>
+				<h2>Zen Educate</h2>
+				<h3>$6.5 m <span>Serie A</span></h3>
+				<ul>
+					<li> </li>
+					<li></li>
+				</ul>
+				<div class="fund-footer"></div>
+			</article>
+			<article class="fund">
+				<div class="img">
+					<img src="" alt="fund logo">
+				</div>
+				<h2>Zen Educate</h2>
+				<h3>$6.5 m <span>Serie A</span></h3>
+				<ul>
+					<li> </li>
+					<li></li>
+				</ul>
+				<div class="fund-footer"></div>
+			</article>
+			<article class="fund">
+				<div class="img">
+					<img src="" alt="fund logo">
+				</div>
+				<h2>Zen Educate</h2>
+				<h3>$6.5 m <span>Serie A</span></h3>
+				<ul>
+					<li> </li>
+					<li></li>
+				</ul>
+				<div class="fund-footer"></div>
+			</article>
+		</div>
+	</section>
+
+	<div class="featured">
+		<section>
+			<h2>Apps ></h2>
+			<div class="img">
+				<img src="" alt="Post image">
+				<div class="content">
+					<span class="tag">Most Popular</span>
+					<h3>WhatsApp is testing a self-destructing feature for your secret chats</h3>
+					<span class="author">
+						Ivhan Metha . 11hrs ago
+					</span>
+				</div>
+			</div>
+			<div class="latest">
+				<div class="text">
+					<h4>Latest</h4>
+					<p><a href="#">WhatsApp bug allowed hackers to steal files and messages with GIFs</a></p>
+				</div>
+				<div class="text-img"></div>
+			</div>
+			<ul class="links">
+				<li>
+					<a href="#">WhatsApp is testing a 'self-destructing' feature for your secret chats</a>
+				</li>
+				<li>
+					<a href="#">WhatsApp is testing a 'self-destructing' feature for your secret chats</a>
+				</li>
+				<li>
+					<a href="#">WhatsApp is testing a 'self-destructing' feature for your secret chats</a>
+				</li>
+			</ul>
+		</section>
+	</div>
+
 </body>
+
 </html>
