latest deal and footer section created

--- a/index.html
+++ b/index.html
@@ -197,7 +197,83 @@
 			</ul>
 		</section>
 	</div>
-
+	<div class="latest-deals">
+		<div class="deals-heading">
+			<h2>Latest deals ></h2>
+			<h3>See all deals</h3>
+		</div>
+	<div class="deals-content">
+		<div>
+			<div class="img"><img src="" alt=""></div>	
+			<p> <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></p>
+			<span><strike>$988</strike> $492</span>
+		</div>
+		<div>
+				<div class="img"><img src="" alt=""></div>	
+				<p> <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></p>
+			<span><strike>$988</strike> $492</span>
+		</div>
+		<div>
+				<div class="img"><img src="" alt=""></div>	
+				<p> <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></p>
+			<span><strike>$988</strike> $492</span>
+		</div>
+		<div>
+				<div class="img"><img src="" alt=""></div>	
+				<p> <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></p>
+			<span><strike>$988</strike> $492</span>
+		</div>
+		<div>
+				<div class="img"><img src="" alt=""></div>	
+				<p> <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></p>
+			<span><strike>$988</strike> $492</span>
+		</div>
+		<div>
+				<div class="img"><img src="" alt=""></div>	
+				<p> <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></p>
+			<span><strike>$988</strike> $492</span>
+		</div>
+		<div>
+				<div class="img"><img src="" alt=""></div>	
+				<p> <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></p>
+			<span><strike>$988</strike> $492</span>
+		</div>
+		<div>
+				<div class="img"><img src="" alt=""></div>	
+				<p> <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></p>
+			<span><strike>$988</strike> $492</span>
+		</div>
+		<div>
+				<div class="img"><img src="" alt=""></div>	
+				<p> <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></p>
+			<span></span>
+		</div>
+	</div>
+</div>
+<footer>
+	<div class="icons">
+		<ul class="first-ul"> 
+			<li><img src="#" alt="a"></li>
+			<li><img src="#" alt="b"></li>
+			<li><img src="#" alt="s"></li>
+			<li><img src="#" alt="c"></li>
+			<li><img src="#" alt="v"></li>
+			<li><img src="#" alt="v"></li>
+		</ul>
+		<ul>
+			<li><a href="#">Events</a></li>
+			<li><a href="#">Events</a></li>
+			<li><a href="#">Events</a></li>
+			<li><a href="#">Events</a></li>
+			<li><a href="#">Events</a></li>
+		</ul>
+	</div>
+	<div class="copy">
+		<p><span><img src="#" alt="logo"></span> &copy; 2006-2019 The Next Web B.V
+		Made with love in Amsterdam
+		Powered by <a href="#">StackPath</a></p>
+	</div>
+</footer>
 </body>
 
 </html>
