nav bar responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
 	<header>
+		<div class="nav-container">
+			<div class="logo"></div>
 		<div class="first-nav">
 			<ul class="first-ul">
 				<li><a href="#">News</a></li>
@@ -40,7 +42,11 @@
 			<div>
 				<img src="./resources/img/search.png" alt="Search image">
 			</div>
+			<div class="menu">
+				<img src="./resources/img/menu.png" alt="menu">
+			</div>
 		</div>
+	</div>
 		<a href="#">
 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry it →</p>
 		</a>
