carousel section fixed

--- a/index.html
+++ b/index.html
@@ -47,46 +47,65 @@
 			</div>
 		</div>
 	</div>
-		<a href="#">
+		<a class="ticket" href="#">
 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry it →</p>
 		</a>
-		<div>
-			<div></div>
-			<div></div>
-			<div></div>
-		</div>
 	</header>
 
 	<div class="carousel">
-		<div class="slide1"></div>
-		<div class="slide2"></div>
-		<div class="slide3"></div>
+		<div class="slide1">
+			<section>
+				<h1>TNW</h1>
+				<span>Friday-October4, 2019</span>
+			</section>
+		<div class="insight">
+					<p>INSIGHTS</p>
+					<h2>Dad and daughter to serve time over mail-order cryptocurrency drug ring</h2>
+					<span>by Yessi Bello Perez 1 hour ago 13</span>
+		</div>
+		</div>
+		<div class="slide2"> 
+			<section class="tech">
+					<p>INSIGHTS</p>
+					<h2>Dad and daughter to serve time over mail-order cryptocurrency drug ring</h2>
+					<span>by Yessi Bello Perez 1 hour ago 13</span>
+			</section>
+		</div>
+		<div class="slide3">
+			<section class="tech">
+					<p>INSIGHTS</p>
+					<h2>Dad and daughter to serve time over mail-order cryptocurrency drug ring</h2>
+					<span>by Yessi Bello Perez 1 hour ago 13</span>
+			</section>
+		</div>
 	</div>
 
 	<section class="latest-news clearfix">
 		<h2>Latest News ></h2>
-		<article>
-			<div class="l-news-img"></div>
-			<h3 class="l-news-title"></h3>
-			<p class="l-news-content"></p>
-		</article>
-		<article>
-			<div class="l-news-img"></div>
-			<h3 class="l-news-title"></h3>
-			<p class="l-news-content"></p>
-		</article>
-		<article>
-			<div class="l-news-img"></div>
-			<h3 class="l-news-title"></h3>
-			<p class="l-news-content"></p>
-		</article>
-		<article>
-			<div class="l-news-img"></div>
-			<h3 class="l-news-title"></h3>
-			<p class="l-news-content"></p>
-		</article>
-	</section>
+		<div class="latest-news-articles">
+				<article>
+						<div class="l-news-img"></div>
+						<h3 class="l-news-title"></h3>
+						<p class="l-news-content"></p>
+					</article>
+					<article>
+						<div class="l-news-img"></div>
+						<h3 class="l-news-title"></h3>
+						<p class="l-news-content"></p>
+					</article>
+					<article>
+						<div class="l-news-img"></div>
+						<h3 class="l-news-title"></h3>
+						<p class="l-news-content"></p>
+					</article>
+					<article>
+						<div class="l-news-img"></div>
+						<h3 class="l-news-title"></h3>
+						<p class="l-news-content"></p>
+					</article>
+		</div>
 
+	</section>
 	<section class="latest-news clearfix">
 		<h2>Microsoft Surface events 2019</h2>
 		<article>
